# examon

./: .gitignore  README.md  alembic.ini  env.sh  pyproject.toml  todo.md
.github/workflows/: python-package.yml
alembic/: env.py
alembic/versions/: 97d72383ded8_create_questions_table.py
examon/: main.py
examon/lib/: __init__.py  calc_stats.py  examon_config.py  examon_engine.py  examon_engine_factory.py  package_manager.py  package_manager_factory.py  pip_installer.py  quiz_engine.py  quiz_engine_factory.py  repo_manager.py  results_manager.py  settings_manager.py  settings_manager_factory.py  stats.py  streak_tracker.py
examon/lib/config/: __init__.py  config_dir.py  config_dir_factory.py  config_structure.py  config_structure_factory.py  examon_config.py  examon_config_directory_init.py  examon_config_json_init.py  json_config_factory.py  json_config_store.py  settings_manager.py  settings_manager_factory.py
examon/lib/fetcher/: fetch.py  sqlite3.py
examon/lib/ingester/: filename_strategy.py  ingest.py  ingest_factory.py  local_file_system_driver.py  question_adapter_factory.py  sqlite3_driver.py
examon/lib/reporting/: __init__.py  results_manager.py  stats.py
examon/lib/storage/: examon_reader_factory.py  examon_writer_factory.py  question_factory.py
examon/lib/utils/: logging.py  sql_alchemy_ext.py
examon/view/: cli_runtime.py  formatter_options.py  repo_manager.py
examon/view/cli/: __init__.py  examon_arg_parse.py  ingest.py  interactive.py  main.py  overview.py  package.py  repo.py  runner.py  validate_config.py
examon/view/input/: answer_question.py  quiz_arg_parse.py
examon/view/output/: display_stats.py  question.py
resources/: examon.db
tests/: empty.test.db  fixtures.py  test.db  test_integration.py  test_package_manager.py  test_repo_manager.py
tests/helpers/: __init__.py  fixtures_loader.py  helpers.py
tests/lib/: results_manager_test.py
(+62 files in other folders)
