[tool.poetry]
name = "examon"
version = "0.6.4"
description = ""
authors = ["Jarrod Folino <jdfolino@icloud.com>"]
readme = "README.md"
packages = [{include = "examon"}, {include = "resources/examon.db"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pygments = "^2.13.0"
inquirer = "^3.1.1"
simple-term-menu = "1.6.1"
examon-core = ">=1.2.3"
dataclasses-serialization = "^1.3.1"
pyinputplus = "^0.2.12"
alembic = "^1.11.2"
sqlalchemy = "^2.0.19"

[tool.poetry.dev-dependencies]
pytest = "7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
examon = 'examon.view.cli.main:process_command'